# django-auto-rebase

./: .flake8  .pre-commit-config.yaml  CHANGES.md  README.md  lint.sh  mypy.ini  pyproject.toml
.github/workflows/: tests.yaml
django_auto_rebase/: __main__.py  rebase.py
tests/: test_rebase.py
tests/testproject/testapp/migrations/: 0001_initial.py
tests/testproject_basic/testapp/: apps.py  models.py
tests/testproject_basic/testapp/migrations/: 0002_alter_reporter_full_name.py  0002_reporter_handle.py
tests/testproject_basic/testproject/: settings.py  urls.py
tests/testproject_initial/testapp/: models.py
tests/testproject_multiple_migrations/testapp/: models.py
tests/testproject_multiple_migrations/testapp/migrations/: 0001_initial.py  0002_alter_reporter_full_name.py  0002_reporter_handle.py  0003_reporter_level.py
tests/testproject_multiple_migrations/testproject/: settings.py
