[tool.poetry]
name = "django-auto-rebase"
version = "1.0.0"
description = ""
license = "GPL-3.0"
authors = ["Christopher Cordero <ccordero@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/cs-cordero/django-auto-rebase"
repository = "https://github.com/cs-cordero/django-auto-rebase"
documentation = "https://github.com/cs-cordero/django-auto-rebase"
keywords = ["django", "Django", "migrations"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^2.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
mypy = "^0.730.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
isort = "^4.3"

[tool.poetry.scripts]
dar = "django_auto_rebase.rebase:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
