[tool.poetry]
name = "django-auto-rebase"
version = "1.0.0"
description = ""
license = "GPL-3.0"
authors = ["Christopher Cordero <ccordero@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/cs-cordero/django-auto-rebase"
repository = "https://github.com/cs-cordero/django-auto-rebase"
documentation = "https://github.com/cs-cordero/django-auto-rebase"
keywords = ["django", "Django", "migrations"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
flake8 = [
    {version = "^6.0", python = ">=3.8.1"},
    {version = "^5.0", python = ">=3.6.1,<3.8.1"},
]
mypy = "^1.0.1"
black = "^23.1.0"
isort = "^5.0"

[tool.poetry.scripts]
dar = "django_auto_rebase.rebase:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
